--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-size: 20px;
+  font-size: 22px;
   background: #002b36;
   font-family: 'CosmicSansNeueMono';
 }
@@ -19,6 +19,10 @@ pre, pre code {
   color: #fff;
   padding: 2px 0;
   margin: 0;
+}
+
+.powerline .online {
+  float: right;
 }
 
 .cursor {
