--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,63 +1,1 @@
-body {
-  margin: 0;
-  font-size: 22px;
-  background: #002b36;
-  font-family: 'CosmicSansNeueMono';
-}
-
-pre, pre code {
-  font-family: 'CosmicSansNeueMono';
-  margin: 0;
-  padding: 0;
-}
-
-.powerline {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background: #005970;
-  color: #fff;
-  padding: 2px 0;
-  margin: 0;
-}
-
-.powerline .online {
-  float: right;
-}
-
-.cursor {
-  position: absolute;
-  width: 1ch;
-  height: 22px;
-  background: #fff;
-  top: 0;
-  left: 0;
-  -webkit-animation: blink 0.8s linear 0s infinite;
-  -moz-animation: blink 0.8s linear 0s infinite;
-  -ms-animation: blink 0.8s linear 0s infinite;
-  -o-animation: blink 0.8s linear 0s infinite;
-}
-
-@keyframes blink {
-  0%   { opacity: 0 }
-  49%  { opacity: 0 }
-  50%  { opacity: 0.6 }
-  99%  { opacity: 0.6 }
-  100% { opacity: 0 }
-}
-
-@-webkit-keyframes blink {
-  0%   { opacity: 0 }
-  49%  { opacity: 0 }
-  50%  { opacity: 0.6 }
-  99%  { opacity: 0.6 }
-  100% { opacity: 0 }
-}
- 
-@-moz-keyframes blink {
-  0%   { opacity: 0 }
-  49%  { opacity: 0 }
-  50%  { opacity: 0.6 }
-  99%  { opacity: 0.6 }
-  100% { opacity: 0 }
-}
+@font-face{font-family:'CosmicSansNeueMono';src:url('../fonts/CosmicSansNeueMonoBold.otf') format('opentype');font-weight:bold;font-style:normal}@font-face{font-family:'CosmicSansNeueMono';src:url('../fonts/CosmicSansNeueMono.otf') format('opentype');font-weight:normal;font-style:normal}@font-face{font-family:'CosmicSansNeueMono';src:url('../fonts/CosmicSansNeueMonoBold.ttf') format('truetype');font-weight:bold;font-style:normal}@font-face{font-family:'CosmicSansNeueMono';src:url('../fonts/CosmicSansNeueMono.ttf') format('truetype');font-weight:normal;font-style:normal}pre code{display:block;padding:.5em;background:#002b36;color:#93a1a1}pre .comment,pre .template_comment,pre .diff .header,pre .doctype,pre .pi,pre .lisp .string,pre .javadoc{color:#586e75;font-style:italic}pre .keyword,pre .winutils,pre .method,pre .addition,pre .css .tag,pre .request,pre .status,pre .nginx .title{color:#859900}pre .number,pre .command,pre .string,pre .tag .value,pre .rules .value,pre .phpdoc,pre .tex .formula,pre .regexp,pre .hexcolor{color:#2aa198}pre .title,pre .localvars,pre .chunk,pre .decorator,pre .built_in,pre .identifier,pre .vhdl .literal,pre .id,pre .css .function{color:#268bd2}pre .attribute,pre .variable,pre .lisp .body,pre .smalltalk .number,pre .constant,pre .class .title,pre .parent,pre .haskell .type{color:#b58900}pre .preprocessor,pre .preprocessor .keyword,pre .pragma,pre .shebang,pre .symbol,pre .symbol .string,pre .diff .change,pre .special,pre .attr_selector,pre .important,pre .subst,pre .cdata,pre .clojure .title,pre .css .pseudo{color:#cb4b16}pre .deletion{color:#dc322f}pre .tex .formula{background:#073642}body{margin:0;font-size:22px;background:#002b36;font-family:'CosmicSansNeueMono';text-shadow:0 1px #000}pre,pre code{font-family:'CosmicSansNeueMono';margin:0;padding:0}.powerline{position:fixed;bottom:0;width:100%;background:#005469;color:#fff;padding:2px 0;margin:0}.powerline .online{float:right}.cursor{position:absolute;width:1ch;height:22px;background:#fff;top:0;left:0;-webkit-animation:blink .8s linear 0s infinite;-moz-animation:blink .8s linear 0s infinite;-ms-animation:blink .8s linear 0s infinite;-o-animation:blink .8s linear 0s infinite}@keyframes blink{0%{opacity:0}49%{opacity:0}50%{opacity:.6}99%{opacity:.6}100%{opacity:0}}@-webkit-keyframes blink{0%{opacity:0}49%{opacity:0}50%{opacity:.6}99%{opacity:.6}100%{opacity:0}}@-moz-keyframes blink{0%{opacity:0}49%{opacity:0}50%{opacity:.6}99%{opacity:.6}100%{opacity:0}}
