--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -16,6 +16,10 @@ pre, pre code {
   padding: 0;
 }
 
+.content {
+  padding-bottom: 100%;
+}
+
 .powerline {
   position: fixed;
   bottom: 0;
@@ -24,7 +28,7 @@ pre, pre code {
   color: #fff;
   padding: 2px 0;
   margin: 0;
-  .online {
+  .online, .tv {
     float: right;
   }
 }
@@ -64,4 +68,27 @@ pre, pre code {
   50%  { opacity: 0.6 }
   99%  { opacity: 0.6 }
   100% { opacity: 0 }
+}
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: darken(@base03, 5%);
+  -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.1);
+}
+
+::-webkit-scrollbar-thumb {
+  background: lighten(@base03, 5%);
+  -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.2);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: lighten(@base03, 8%);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: lighten(@base03, 10%);
+  -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.3);
 }
