--- a/stylesheets/fonts.less
+++ b/stylesheets/fonts.less
@@ -1,27 +1,11 @@
 @font-face {
-  font-family: 'CosmicSansNeueMono';
-  src: url('../fonts/CosmicSansNeueMonoBold.otf') format('opentype');
-  font-weight: bold;
-  font-style: normal;
+  font-family: 'FantasqueSansMono';
+  src: url('../fonts/FantasqueSansMono.woff') format('woff'),
+       url('../fonts/FantasqueSansMono.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: 'CosmicSansNeueMono';
-  src: url('../fonts/CosmicSansNeueMono.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'CosmicSansNeueMono';
-  src: url('../fonts/CosmicSansNeueMonoBold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'CosmicSansNeueMono';
-  src: url('../fonts/CosmicSansNeueMono.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'FantasqueSansMonoBold';
+  src: url('../fonts/FantasqueSansMonoBold.woff') format('woff'),
+       url('../fonts/FantasqueSansMonoBold.ttf') format('truetype');
 }
