--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -6,12 +6,12 @@ body {
   margin: 0;
   font-size: 22px;
   background: @base03;
-  font-family: 'CosmicSansNeueMono';
+  font-family: 'FantasqueSansMono';
   text-shadow: 0 1px darken(@base03, 20%);
 }
 
 pre, pre code {
-  font-family: 'CosmicSansNeueMono';
+  font-family: 'FantasqueSansMono';
   margin: 0;
   padding: 0;
 }
@@ -24,8 +24,8 @@ pre, pre code {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background: lighten(@base03, 10%);
-  color: #fff;
+  background: @base02;
+  color: @base0;
   padding: 2px 0;
   margin: 0;
   .online, .tv {
@@ -71,24 +71,24 @@ pre, pre code {
 }
 
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  background: darken(@base03, 5%);
+  background: lighten(@base03, 5%);
   -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.1);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: lighten(@base03, 5%);
+  background: darken(@base03, 2%);
   -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.2);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: lighten(@base03, 8%);
+  background: darken(@base03, 2%);
 }
 
 ::-webkit-scrollbar-thumb:active {
-  background: lighten(@base03, 10%);
+  background: darken(@base03, 2%);
   -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.3);
 }
