--- a/stylesheets/theme.less
+++ b/stylesheets/theme.less
@@ -1,92 +1,102 @@
 @import "colors.less";
 
-pre {
-  code {
-    display: block;
-    padding: 0.5em;
-    background: @base03;
-    color: @base1;
-  }
+.hljs {
+  display: block;
+  background: @base03;
+  color: @base0;
+}
 
-  .comment,
-  .template_comment,
-  .diff .header,
-  .doctype,
-  .pi,
-  .lisp .string,
-  .javadoc {
-    color: @base01;
-    font-style: italic;
-  }
+.hljs-comment,
+.hljs-template_comment,
+.diff .hljs-header,
+.hljs-doctype,
+.hljs-pi,
+.lisp .hljs-string,
+.hljs-javadoc {
+  color: @base01;
+}
 
-  .keyword,
-  .winutils,
-  .method,
-  .addition,
-  .css .tag,
-  .request,
-  .status,
-  .nginx .title {
-    color: @green;
-  }
+/* Solarized Green */
+.hljs-keyword,
+.hljs-winutils,
+.method,
+.hljs-addition,
+.css .hljs-tag,
+.hljs-request,
+.hljs-status,
+.nginx .hljs-title {
+  color: @green;
+}
 
-  .number,
-  .command,
-  .string,
-  .tag .value,
-  .rules .value,
-  .phpdoc,
-  .tex .formula,
-  .regexp,
-  .hexcolor {
-    color: @cyan;
-  }
+/* Solarized Cyan */
+.hljs-number,
+.hljs-command,
+.hljs-string,
+.hljs-tag .hljs-value,
+.hljs-rules .hljs-value,
+.hljs-phpdoc,
+.tex .hljs-formula,
+.hljs-regexp,
+.hljs-hexcolor,
+.hljs-link_url {
+  color: @cyan;
+}
 
-  .title,
-  .localvars,
-  .chunk,
-  .decorator,
-  .built_in,
-  .identifier,
-  .vhdl .literal,
-  .id,
-  .css .function {
-    color: @blue;
-  }
+/* Solarized Blue */
+.hljs-title,
+.hljs-localvars,
+.hljs-chunk,
+.hljs-decorator,
+.hljs-built_in,
+.hljs-identifier,
+.vhdl .hljs-literal,
+.hljs-id,
+.css .hljs-function {
+  color: @blue;
+}
 
-  .attribute,
-  .variable,
-  .lisp .body,
-  .smalltalk .number,
-  .constant,
-  .class .title,
-  .parent,
-  .haskell .type {
-    color: @yellow;
-  }
+/* Solarized Yellow */
+.hljs-attribute,
+.hljs-variable,
+.lisp .hljs-body,
+.smalltalk .hljs-number,
+.hljs-constant,
+.hljs-class .hljs-title,
+.hljs-parent,
+.haskell .hljs-type,
+.hljs-link_reference {
+  color: @yellow;
+}
 
-  .preprocessor,
-  .preprocessor .keyword,
-  .pragma,
-  .shebang,
-  .symbol,
-  .symbol .string,
-  .diff .change,
-  .special,
-  .attr_selector,
-  .important,
-  .subst,
-  .cdata,
-  .clojure .title,
-  .css .pseudo {
-    color: @orange;
-  }
+/* Solarized Orange */
+.hljs-preprocessor,
+.hljs-preprocessor .hljs-keyword,
+.hljs-pragma,
+.hljs-shebang,
+.hljs-symbol,
+.hljs-symbol .hljs-string,
+.diff .hljs-change,
+.hljs-special,
+.hljs-attr_selector,
+.hljs-subst,
+.hljs-cdata,
+.clojure .hljs-title,
+.css .hljs-pseudo,
+.hljs-header {
+  color: @orange;
+}
 
-  .deletion {
-    color: @red;
-  }
+/* Solarized Red */
+.hljs-deletion,
+.hljs-important {
+  color: @red;
+}
 
-  .tex .formula {
-    background: @base02;
-  }
+/* Solarized Violet */
+.hljs-link_label {
+  color: @violet;
+}
+
+.tex .hljs-formula {
+  background: @base02;
 }
