--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -1,11 +1,17 @@
+// Solarized
+
+// background tones (dark)
 @base03: #002b36;
 @base02: #073642;
+// content tones
 @base01: #586e75;
 @base00: #657b83;
 @base0:  #839496;
 @base1:  #93a1a1;
+// background tones (light)
 @base2:  #eee8d5;
 @base3:  #fdf6e3;
+
 @yellow: #b58900;
 @orange: #cb4b16;
 @red:    #dc322f;
@@ -14,3 +20,19 @@
 @blue:   #268bd2;
 @cyan:   #2aa198;
 @green:  #859900;
+
+// Collab
+
+// background tones (light)
+@c-base3:  #fafafa;
+@c-base2:  #eee;
+
+// content tones
+@c-base01: #999;
+@c-base00: #aaa;
+@c-base0:  #eee;
+@c-base1:  #fff;
+
+// background tones (dark)
+@c-base02:  #444;
+@c-base03:  #2d2f30;
