--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -5,11 +5,14 @@
 @editor-font-size: 18px;
 @editor-line-height: 19px;
 
-body {
+html, body {
   background: @c-base3;
+  overflow: hidden;
+  height: 100%;
 }
 
 .layout {
+  height: 100%;
   padding-left: 200px;
   left: 0;
 }
@@ -53,9 +56,11 @@ body {
 
 .editor {
   position: relative;
+  height: 100%;
   font-size: @editor-font-size;
   line-height: @editor-line-height;
   font-family: 'FantasqueSansMono';
+  padding-bottom: @editor-line-height * 2;
 
   pre, pre > code {
     margin: 0;
@@ -70,6 +75,7 @@ body {
     text-shadow: 0 1px #fff;
     font-family: 'FantasqueSansMono';
     color: @base1;
+    height: 100%;
   }
 
   pre {
@@ -111,16 +117,27 @@ body {
 
   .content {
     padding-bottom: 100%;
+    overflow: auto;
+    width: 100%;
+    overflow: auto;
   }
 
   .powerline {
     position: fixed;
     bottom: 0;
     background: @c-base0;
-    height: @editor-line-height;
+    height: @editor-line-height * 2;
     width: 100%;
     color: @c-base00;
     margin: 0;
+
+    .filename {
+      display: inline-block;
+      background: #fff;
+      margin: 5px;
+      padding: 5px 10px;
+      border-radius: 20px;
+    }
   }
 
   .cursor {
