--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -86,6 +86,32 @@
 .xml .hljs-cdata {
   opacity: 0.5;
 }
+label {
+  font-weight: bold;
+  font-size: 14px;
+  margin-bottom: 0;
+  text-transform: uppercase;
+}
+.form-control {
+  border-color: #dbdcde;
+  border-top-color: #b3b5b9;
+  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.07);
+  border-radius: 2px;
+  box-sizing: border-box;
+}
+.modal-content {
+  background: #fafafa;
+  border: 1px solid #dbdcde;
+  border-radius: 0;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+.modal-content .modal-footer {
+  background: #f6f6f6;
+}
+.modal-backdrop {
+  opacity: 1;
+  background: rgba(255, 255, 255, 0.7);
+}
 html,
 body {
   background: #fafafa;
@@ -130,13 +156,17 @@ body {
   background: #262728;
   text-decoration: none;
 }
+.editor-wrapper {
+  height: 100%;
+  padding-bottom: 38px;
+}
 .editor {
   position: relative;
   height: 100%;
   font-size: 18px;
   line-height: 19px;
   font-family: 'FantasqueSansMono';
-  padding-bottom: 38px;
+  overflow-y: auto;
 }
 .editor pre,
 .editor pre > code {
@@ -187,9 +217,7 @@ body {
   text-align: right;
 }
 .editor .content {
-  padding-bottom: 100%;
   width: 100%;
-  overflow: auto;
 }
 .editor .powerline {
   position: fixed;
