--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -100,17 +100,15 @@ label {
   box-sizing: border-box;
 }
 .modal-content {
-  background: #fafafa;
-  border: 1px solid #dbdcde;
-  border-radius: 0;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  background: #fefefe;
+  border: 0;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 .modal-content .modal-footer {
-  background: #f6f6f6;
-}
-.modal-backdrop {
-  opacity: 1;
-  background: rgba(255, 255, 255, 0.7);
+  margin-top: 0;
+  padding-top: 0;
+  border-top: 0;
 }
 html,
 body {
