--- a/stylesheets/modal.less
+++ b/stylesheets/modal.less
@@ -1,17 +1,14 @@
 @import "colors.less";
 
 .modal-content {
-  background: #fafafa;
-  border: 1px solid #dbdcde;
-  border-radius: 0;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  background: #fefefe;
+  border: 0;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 
   .modal-footer {
-    background: #f6f6f6;
+    margin-top: 0;
+    padding-top: 0;
+    border-top: 0;
   }
-}
-
-.modal-backdrop {
-  opacity: 1;
-  background: rgba(255,255,255, 0.7);
 }
