--- a/templates/member.html
+++ b/templates/member.html
@@ -1,1 +1,6 @@
-<li class="list-group-item">{{ name }}</li>
+<li class="list-group-item">
+  {{ name }}
+  {% if(is_coding) { %}
+  <span class="glyphicon glyphicon-pencil pull-right"></span>
+  {% } %}
+</li>
