focus nickname field, renamed: change-username -> change-nick

--- a/templates/change-nick.html
+++ b/templates/change-nick.html
@@ -2,13 +2,13 @@
   <div class="modal-content">
     <form>
       <div class="modal-body">
-        <label for="username">Username</label>
-        <input type="text" class="form-control input-lg" id="username">
+        <label for="nick">Nickname</label>
+        <input type="text" class="form-control input-lg" id="nick">
       </div>
 
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary" id="save-username">Apply</button>
+        <button type="submit" class="btn btn-primary" id="save-nick">Apply</button>
       </div>
     </form>
   </div>
